# YAFET

./: .gitmodules  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
cmake/: build.cmake  utilities.cmake
main/: CMakeLists.txt
main/app/: CMakeLists.txt  main.cpp
main/classes/: CMakeLists.txt  file.cpp
main/classes/include/: algorithm.h  file.h
main/core/: CMakeLists.txt  constants.cpp  core.cpp
main/core/include/: constants.h  core.h
plugins/: INFO
